2002-06-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tcl.h: #ifdef logic for K&R C backwards compatibility
	changed to assume modern C by default.  See SF FR #565088 for
	full details.

2002-06-17  Don Porter  <dgp@users.sourceforge.net>

	* library/msgcat/msgcat.tcl:  More Windows Registry locale codes
	from Bruno Haible.

	* doc/msgcat.n:
	* library/msgcat/msgcat.tcl:
	* library/msgcat/pkgIndex.tcl:
	* tests/msgcat.test:  Revised locale initialization to interpret
	environment variable locale values according to XPG4, and to
	recognize the LC_ALL and LC_MESSAGES values over that of LANG.
	Also added many Windows Registry locale values to those 
	recognized by msgcat.  Revised tests and docs.  Bumped to
	version 1.3.  Thanks to Bruno Haible for the report and
	assistance crafting the solution.  [Bug 525522, 525525]

2002-06-16  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompile.c (TclCompileTokens): a better algorithm for
	the previous bug fix.

2002-06-16  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompile.c (TclCompileTokens): 
	* tests/compile.test: [Bug 569438] in the processing of dollar
	variables; report by Georgios Petasis. 
	
2002-06-16  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c: bug in the consolidation of the
	INCR_..._STK instructions; the bug could not be exercised as the
	(faulty) instruction INST_INCR_ARRAY_STK was never compiled-in
	(related to [Bug 569438]).

2002-06-14  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclExecuteByteCode): runtime peep-hole
	optimisation of variables (INST_STORE, INST_INCR) and commands
	(INST_INVOKE); faster check for the existence of a catch.

2002-06-14  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclExecuteByteCode): runtime peep-hole
	optimisation of comparisons.

2002-06-14  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclExecuteByteCode): runtime peep-hole