@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: exec.test,v 1.9 2001/11/23 01:26:02 das Exp $
+# RCS: @(#) $Id: exec.test,v 1.10 2002/06/17 20:05:49 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -585,6 +585,16 @@ test exec-17.1 { inheriting standard I/O } {execCommandExists stdio} {
     set result
 } {{foobar
 }}
+
+test exec-18.1 { exec cat deals with weird file names} {execCommandExists} {
+    set f "foo\[\{blah"
+    set fout [open $f w]
+    puts $fout "contents"
+    close $fout
+    set res [list [catch {exec cat $f} msg] $msg]
+    file delete $f
+    set res
+} {0 contents}
 
 # cleanup
 file delete script gorp.file gorp.file2
